--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup .NET
-        uses: action/setup-dotnet@v2
+        uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 8.0.0
 
