--- a/Simple.ArgumentParser/Simple.ArgumentParser.csproj
+++ b/Simple.ArgumentParser/Simple.ArgumentParser.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>Simple.ArgumentParser</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Henrik Larsson</Authors>
+        <PackageDescription>This is a really simple, yet powerful and dynamic .NET command line argument parser library.</PackageDescription>
+        <PackageTags>args;parse;tool</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    </PropertyGroup>
+
 </Project>
