--- a/Simple.ArgumentParser/Simple.ArgumentParser.csproj
+++ b/Simple.ArgumentParser/Simple.ArgumentParser.csproj
@@ -8,10 +8,13 @@
 
     <PropertyGroup>
         <PackageId>Simple.ArgumentParser</PackageId>
-        <Version>1.0.0</Version>
+        <Version>1.0.1-alpha</Version>
         <Authors>Henrik Larsson</Authors>
+        <PackageProjectUrl>https://github.com/henkla/Simple.ArgumentParser</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/henkla/Simple.ArgumentParser</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
         <PackageDescription>This is a really simple, yet powerful and dynamic .NET command line argument parser library.</PackageDescription>
-        <PackageTags>args;parse;tool</PackageTags>
+        <PackageTags>args;parse;tool;console;options</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
