--- a/Simple.ArgumentParser/Simple.ArgumentParser.csproj
+++ b/Simple.ArgumentParser/Simple.ArgumentParser.csproj
@@ -8,7 +8,7 @@
 
     <PropertyGroup>
         <PackageId>Simple.ArgumentParser</PackageId>
-        <Version>1.0.2-alpha</Version>
+        <Version>1.0.2</Version>
         <Authors>Henrik Larsson</Authors>
         <PackageProjectUrl>https://github.com/henkla/Simple.ArgumentParser</PackageProjectUrl>
         <RepositoryUrl>https://github.com/henkla/Simple.ArgumentParser</RepositoryUrl>
