wip - almost total re-write

--- a/Simple.ArgumentParser.Tests/Simple.ArgumentParser.Tests.csproj
+++ b/Simple.ArgumentParser.Tests/Simple.ArgumentParser.Tests.csproj
@@ -20,4 +20,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Simple.ArgumentParser\Simple.ArgumentParser.csproj" />
+    </ItemGroup>
+
 </Project>
