--- a/Simple.ArgumentParser/Simple.ArgumentParser.csproj
+++ b/Simple.ArgumentParser/Simple.ArgumentParser.csproj
@@ -8,7 +8,7 @@
 
     <PropertyGroup>
         <PackageId>Simple.ArgumentParser</PackageId>
-        <Version>1.0.6</Version>
+        <Version>1.1.0</Version>
         <Authors>Henrik Larsson</Authors>
         <PackageProjectUrl>https://github.com/henkla/Simple.ArgumentParser</PackageProjectUrl>
         <RepositoryUrl>https://github.com/henkla/Simple.ArgumentParser</RepositoryUrl>
@@ -21,6 +21,10 @@
 
     <ItemGroup>
         <None Include="../README.md" Pack="true" PackagePath="" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Properties\" />
     </ItemGroup>
 
 </Project>
