add condition for pipeline

--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -29,7 +29,9 @@ jobs:
         run: dotnet test --configuration Release --no-restore
 
       - name: Pack NuGet
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: dotnet pack Simple.ArgumentParser/Simple.ArgumentParser.csproj --configuration Release --output ./nupkgs
 
       - name: Publish NuGet
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: dotnet nuget push ./nupkgs/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
